@@ -1,6 +1,8 @@
 package com.trbtree.service.modules.protfolio.service.impl;
 
+import com.trbtree.service.modules.protfolio.dto.LanguageRequest;
 import com.trbtree.service.modules.protfolio.dto.LanguageResponse;
+import com.trbtree.service.modules.protfolio.entity.Language;
 import com.trbtree.service.modules.protfolio.mapper.LanguageMapper;
 import com.trbtree.service.modules.protfolio.repository.LanguageRepository;
 import com.trbtree.service.modules.protfolio.service.LanguageService;
@@ -17,8 +19,26 @@ public class LanguageServiceImpl implements LanguageService {
     private final LanguageMapper languageMapper;
 
     @Override
+    public LanguageResponse updateLanguage(LanguageRequest languageRequest, UUID id) {
+        Language oldLanguage = languageRepository.findById(id).orElse(null);
+        Language language = languageMapper.toEntity(languageRequest);
+        language.setUserId(oldLanguage.getUserId());
+        languageRepository.delete(oldLanguage);
+        Language response= languageRepository.save(language);
+        return languageMapper.toDTO(response);    }
+
+    @Override
+    public LanguageResponse addLanguage(LanguageRequest languageRequest, UUID userId) {
+        Language language = languageMapper.toEntity(languageRequest);
+        language.setUserId(userId);
+        Language response= languageRepository.save(language);
+        return languageMapper.toDTO(response);
+    }
+
+    @Override
     public List<LanguageResponse> getLanguages(UUID userId) {
-        return List.of();
+        return Optional.ofNullable(languageRepository.findByUserId(userId))
+                .orElse(Collections.emptyList());
     }
 //    @Override
 //    public List<LanguageResponse> getLanguages(UUID userId) {
